--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@
   font-family: "Anuphan", "sans-serif";
 }
 
-input {
+input:not([role="combobox"]) {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
     var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0
